jsonplaceholder/Deployment-jsonplaceholder.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jsonplaceholder
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: jsonplaceholder
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jsonplaceholder
    spec:
      containers:
        - name: jsonplaceholder
          image: jsonplaceholder
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 100Mi
          ports:
            - containerPort: 3000
              name: http
      restartPolicy: Always
