jsonplaceholder/Service-jsonplaceholder.yaml
apiVersion: v1
kind: Service
metadata:
  name: jsonplaceholder
spec:
  selector:
    app.kubernetes.io/name: jsonplaceholder
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 3000
