jsonplaceholder/HTTPRoute-jsonplaceholder.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jsonplaceholder
spec:
  hostnames:
    - api.demo.localhost
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway
      namespace: gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /todos
        - path:
            type: PathPrefix
            value: /users
        - path:
            type: PathPrefix
            value: /posts
        - path:
            type: PathPrefix
            value: /comments
        - path:
            type: PathPrefix
            value: /albums
        - path:
            type: PathPrefix
            value: /photos
      backendRefs:
        - group: ""
          kind: Service
          name: jsonplaceholder
          namespace: jsonplaceholder
          port: 3000
          weight: 100
